--- a/veterinaria_patitas/veterinaria_patitas/css/registro.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/registro.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Shadows Into Light', cursive;
   margin: 0;
@@ -14,9 +20,11 @@ color: #fff;
 width: 500px;
 text-align:center;
 margin:auto;
-  font-size:90px;
+font-size:70px;
 
 }
+
+
 #logo{
   display: block;
   margin-left: auto;
@@ -25,7 +33,7 @@ margin:auto;
   border-top-right-radius: 50% 50%;
   border-bottom-right-radius: 50% 50%;
   border-bottom-left-radius: 50% 50%;
-  
+  padding: 5px;
 }
 
 .hero{
@@ -71,20 +79,38 @@ margin:auto;
 
 .item-contact{
   width: 25%;
-  padding: 60px 0;
+  padding: 20px 0;
   text-align: center;
   background: linear-gradient(180deg,#5d476e 0%,#AE8FC8 100% );
 }
 
+
+a:hover {
+  color: #2198A0;
+}
+
+a{ 
+  color: #fff;
+  outline: none;
+  text-decoration: none;
+}
+
+h5{
+  font-weight: normal;
+  margin: 0;
+  padding: 15;
+  
+}
+
 .contact-icon{
-  font-size: 24px;
+  font-size: 40px;
   color: #fff;
   line-height: 20px;
   margin-right: 4px;
 }
 .contact-title{
-  font-size: 24px;
-  line-height: 20px;
+  font-size: 18px;
+  line-height: 18px;
 
 }
 * {
@@ -121,6 +147,7 @@ input[type="password"]{
   color: #999;
 }
 .button{
+  
   border: none;
   width: 100%;
   color: white;
