Footer para todas las paginas html y modificaciones css

--- a/veterinaria_patitas/veterinaria_patitas/css/registro.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/registro.css
@@ -182,4 +182,10 @@ p{
       margin-top: 150px;
       border-radius: 2%;
   }
+  .footer-caption{
+    width: 25%;
+    padding: 20px 0;
+    text-align: center;
+    margin-bottom: 80px;
+}
 }
