--- a/veterinaria_patitas/veterinaria_patitas/css/contacto.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/contacto.css
@@ -207,6 +207,10 @@ textarea{
       margin-top: 150px;
       border-radius: 2%;
   }
+  .footer-caption{
+    width: 25%;
+    padding: 20px 0;
+    text-align: center;
+    margin-bottom: 80px;
+  }
 }
-
-
