--- a/veterinaria_patitas/veterinaria_patitas/css/productos.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/productos.css
@@ -28,15 +28,13 @@ body{
     margin-left: 0;
     margin-right: 0;
     padding: 0%;
-
 }
 
 figure {
     margin-top: 100px;
-    margin-left: 20px;
     float:left;
         background-color:rgb(255, 254, 241);
-        padding:15px 15px 15px 15px;
+        padding:15px 30px 15px 15px;
         border:2px solid #BFBFBF;
         box-shadow:7px 7px 10px rgba(0, 0, 0, 0.8);
 }
@@ -76,8 +74,7 @@ figure img:hover{
     padding: 0;
 
 }
-.logo-name{
-   
+.logo-name{ 
     padding: 10px;
     font-size: 30px;
 }
@@ -140,7 +137,11 @@ h5{
 
 
 .footer-caption{
-    width: 25%;
+    width: 35%;
     padding: 20px 0;
     text-align: center;
+    margin-top: 900px;
+    margin-left: 490px;
+    margin-bottom: 100;
 }
+
