--- a/veterinaria_patitas/veterinaria_patitas/css/contacto.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/contacto.css
@@ -84,12 +84,10 @@ font-size:40px;
   
 }
 
+.item-contact a:hover{  color: #2198A0;}
 
-a:hover {
-  color: #2198A0;
-}
 
-a{ 
+.item-contact a{ 
   color: #fff;
   outline: none;
   text-decoration: none;
@@ -199,6 +197,31 @@ textarea{
   color       : #FFF;
   background: cadetblue;
 }
+
+
+
+.footer-caption2{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: space-evenly;
+    height: auto;
+    padding: 0%;
+    margin-top: 80px;
+          
+
+}
+.breadcrumb-item a{
+    color:white;
+    text-decoration: none;
+    font-size: 22px;
+        
+}
+
+.breadcrumb-item a:hover {
+    color: #2198A0;
+      
+}
+
 @media(min-width:768px)
 {
   .formulario{
