--- a/veterinaria_patitas/veterinaria_patitas/css/registro.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/registro.css
@@ -125,14 +125,25 @@ h5{
 }
 .formulario{
   background: #fff;
-  margin-top: 150px;
-  padding: 3px;
+  margin-top: 130px;
+  padding: 10px;
+  border-radius: 2%;
+
 }
 h1{
   text-align: center;
   color: #1a2537;
   font-size: 40px;
 }
+.titulo{
+  font-family: 'Shadows Into Light', cursive;
+  color:#030303;
+  width: 500px;
+  text-align:center;
+  margin:auto;
+  font-size:40px;
+  
+  }
 input[type="text"],
 input[type="password"]{
   font-size: 20px;
