--- a/veterinaria_patitas/veterinaria_patitas/css/productos.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/productos.css
@@ -61,6 +61,14 @@ figure img:hover{
     -o-transform:scale(1.1);
     transform:scale(1.1);
 }
+@media screen and (max-width:900px){
+.title{
+    font-size: 50px;
+}
+.nav-container{
+    justify-content: space-evenly;
+}
+}
 
 .hero{
     width: 100%;
