--- a/veterinaria_patitas/veterinaria_patitas/css/registro.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/registro.css
@@ -229,5 +229,31 @@ p{
     padding: 20px 0;
     text-align: center;
     margin-bottom: 80px;
+
+  }
 }
+
+@media screen and (max-width:700px){
+  main .container,
+  footer .container{
+      padding: 60px 0;
+  }
+
+  .nav-container{
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: space-evenly;
+
+  }
+
+  .nav-hero{
+      height: auto;
+  }
+
+
+  .logo{
+      padding: 15px 0;
+      text-align: center;
+  }
 }
+
