--- a/veterinaria_patitas/veterinaria_patitas/css/contacto.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/contacto.css
@@ -264,3 +264,89 @@ textarea{
     margin-bottom: 80px;
   }
 }
+
+/* --- --- CAROUSEL --- --- */
+.carousel__contenedor {
+	position:relative;
+	
+  margin-top: 30px;
+}
+
+.carousel__anterior,
+.carousel__siguiente {
+	position: absolute;
+	display: block;
+	width: 30px;
+	height: 30px;
+	border: none;
+	top: calc(50% - 35px);
+	cursor: pointer;
+	line-height: 30px;
+	text-align: center;
+	background: none;
+	color:#FFF;
+	opacity: 20%;
+}
+
+.carousel__anterior:hover,
+.carousel__siguiente:hover {
+	opacity: 100%;
+}
+
+.carousel__anterior {
+	left: 0px;
+}
+
+.carousel__siguiente {
+	right: -5px;
+}
+
+.carousel__lista {
+	overflow: hidden;
+	margin-left:35px;
+margin-right:35px;
+}
+
+.carousel__elemento {
+	text-align: center;
+
+ 
+}
+.carousel__elemento img{
+
+  width:380px;
+  height:220px;
+  padding:0px;
+
+}
+
+.carousel__indicadores .glider-dot {
+	display: block;
+	width: 30px;
+	height: 4px;
+	background: #2198A0;
+	opacity: .2;
+	border-radius: 0;
+}
+
+.carousel__indicadores .glider-dot:hover {
+	opacity: .5;
+}
+
+.carousel__indicadores .glider-dot.active {
+	opacity: 1;
+}
+
+@media screen and (max-width: 800px) {
+	body {
+		padding: 40px 0;
+	}
+
+	.contenido-principal {
+		flex-direction: column;
+	}
+
+	.contenido-principal > * {
+		width: 100%;
+	}
+}
