--- a/veterinaria_patitas/veterinaria_patitas/css/contacto.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/contacto.css
@@ -126,7 +126,7 @@ h5{
 
 .formulario{
   background: #fff;
-  margin-top: 130px;
+  margin-top: 50px;
   padding: 10px;
   border-radius: 2%;
 
@@ -157,6 +157,7 @@ select{
   width: 50%;
   padding: 10px;
   border: none;
+  
 }
 
 
@@ -309,8 +310,6 @@ margin-right:35px;
 
 .carousel__elemento {
 	text-align: center;
-
- 
 }
 .carousel__elemento img{
 
@@ -336,7 +335,11 @@ margin-right:35px;
 .carousel__indicadores .glider-dot.active {
 	opacity: 1;
 }
-
+.carousel  p {
+  color: #FFF;
+  text-align: center;
+  
+  }
 @media screen and (max-width: 800px) {
 	body {
 		padding: 40px 0;
