--- a/veterinaria_patitas/veterinaria_patitas/css/registro.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/registro.css
@@ -27,7 +27,6 @@ font-size:70px;
 
 }
 
-
 #logo{
   display: block;
   margin-left: auto;
@@ -125,7 +124,7 @@ h5{
 }
 .formulario{
   background: #fff;
-  margin-top: 130px;
+  margin-top: 50px;
   padding: 10px;
   border-radius: 2%;
 
@@ -321,7 +320,10 @@ margin-right:35px;
 	opacity: .2;
 	border-radius: 0;
 }
-
+.carousel  p {
+color: #FFF;
+text-align: center;
+}
 .carousel__indicadores .glider-dot:hover {
 	opacity: .5;
 }
