--- a/veterinaria_patitas/veterinaria_patitas/css/registro.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/registro.css
@@ -121,6 +121,8 @@ h5{
 .contenedor{
   width: 100%;
   padding: 15px;
+  align-items: center;
+  align-content: center;
 }
 .formulario{
   background: #fff;
@@ -144,15 +146,18 @@ h1{
   
   }
 input[type="text"],
+input[type="email"],
 input[type="password"]{
   font-size: 20px;
-  width: 82%;
-  padding: 10px;
+  width: 100%;
+  padding: 8px;
   border: none;
+  text-align:left;
 }
 .input-contenedor{
   margin-bottom: 15px;
   border: 1px solid #aaa;
+  
 }
 .icon{
   min-width: 50px;
