--- a/veterinaria_patitas/veterinaria_patitas/css/productos.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/productos.css
@@ -4,13 +4,13 @@
     padding: 0;
     box-sizing: border-box;
 }
-#titulo{
+.titulo{
     
     color: #fff;
-	width: 500px;
+	
 	text-align:center;
 	margin:auto;
-    font-size:70px;
+    
 
 }
 #logo{
