--- a/veterinaria_patitas/veterinaria_patitas/css/registro.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/registro.css
@@ -77,13 +77,14 @@ font-size:70px;
   width: 100%;
   flex-wrap: wrap;
   color: #fff;
+  background: linear-gradient(180deg,#5d476e 0%,#AE8FC8 100% );
 }
 
 .item-contact{
   width: 25%;
   padding: 20px 0;
   text-align: center;
-  background: linear-gradient(180deg,#5d476e 0%,#AE8FC8 100% );
+  /*background: linear-gradient(180deg,#5d476e 0%,#AE8FC8 100% );*/
 }
 
 
