--- a/veterinaria_patitas/veterinaria_patitas/css/contacto.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/contacto.css
@@ -266,6 +266,14 @@ textarea{
     text-align: center;
     margin-bottom: 80px;
   }
+  .carousel__elemento img{
+
+    width:auto;
+    height:auto;
+    padding:auto;
+  
+  }
+  
 }
 
 /* --- --- CAROUSEL --- --- */
