--- a/veterinaria_patitas/veterinaria_patitas/css/registro.css
+++ b/veterinaria_patitas/veterinaria_patitas/css/registro.css
@@ -130,8 +130,8 @@ h5{
   margin-top: 50px;
   padding: 10px;
   border-radius: 2%;
-
 }
+
 h1{
   text-align: center;
   color: #1a2537;
@@ -148,13 +148,22 @@ h1{
   }
 input[type="text"],
 input[type="email"],
-input[type="password"]{
+input[type="password"],
+input[type="number"]{
   font-size: 20px;
   width: 100%;
   padding: 8px;
   border: none;
   text-align:left;
 }
+select{
+  font-size: 23px;
+  width: 50%;
+  padding: 10px;
+  border: none;
+  
+}
+
 .input-contenedor{
   margin-bottom: 15px;
   border: 1px solid #aaa;
@@ -181,6 +190,8 @@ input[type="password"]{
 }
 p{
   text-align: center;
+  
+  
 }
 
 .link-iniciar{
@@ -219,6 +230,17 @@ p{
   color: #2198A0;
     
 }
+#btn-actualizacion{
+  border: none;
+   width: 50%;
+   color: white;
+   font-size: 18px;
+   background:  #2198A0;
+   padding: 8px 12px;
+   margin-bottom: 15px ;
+   border-radius: 5px;
+   cursor: pointer;
+ }
 #btn{
  border: none;
   width: 50%;
